[build-system]
requires = [
  "setuptools>=42",
  "setuptools-scm>=8.0.4",
]
build-backend = "setuptools.build_meta"

[project]
authors = [
  {email = "support@neuralmagic.com", name = "Neuralmagic, Inc."},
]
description = "Various utilities for use with nm-vllm"
dynamic = ["version"]
license = {text = "Apache"}
name = "nm-vllm-utils"
readme = "README.md"
requires-python = ">=3.8.0"

[project.optional-dependencies]
all = ["nm-vllm-utils[dev]"]
dev = [
  "black==24.3.0",
  "build~=1.0.3",
  "coverage-badge~=1.1.0",
  "coverage~=7.4.4",
  "darglint==1.8.1",
  "dlint==0.14.1",
  "flake8-comprehensions==3.10.1",
  "flake8-eradicate==1.5.0",
  "flake8-pyproject~=1.2.3",
  "flake8-spellcheck==0.28.0",
  "flake8-typing-imports==1.12.0",
  "flake8==7.0.0",
  "isort==5.8.0",
  "mypy~=1.8.0",
  "pep8-naming==0.13.2",
  "pre-commit~=2.20.0",
  "pytest-watcher~=0.4.2",
  "pytest~=8.1.1",
  "removestar~=1.3.1",
  "safety==2.3.4",
  "wheel>=0.36.2",
]

[project.dependencies]
aiohttp = "==3.9.5"

[project.urls]
Homepage = "https://github.com/neuralmagic/nm-vllm-utils"
Source = "https://github.com/neuralmagic/nm-vllm-utils"
Tracker = "https://github.com/neuralmagic/nm-vllm-utils/issues"

[tool.black]
line-length = 88
target-version = ['py38']
include = '(helm_charts_dev|tests)/.*\\.py$'

[tool.coverage.run]
omit = [
  "nm_vllm_utils/__version__.py",
]
source = [
  "nm_vllm_utils",
]

[tool.flake8]
ignore = ["E203", "E251", "E701", "E800", "N805", "W503", "DAR101", "DAR201", "DAR301", "DAR401"]
max-line-length = 88
min_python_version = 3

[tool.isort]
include_trailing_comma = true
line_length=88
lines_after_imports = 2
known_first_party = ["helm_charts_dev", "tests"]
multi_line_output = 3
profile = "black"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
use_parentheses = true

[tool.mypy]
check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
exclude = '^(fixtures|.*?\.js|.*?\.json)'
ignore_missing_imports = true
plugins = []
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pytest.ini_options]
addopts = "-m 'not integration_test'"
markers = ["integration_test: marks tests as integration tests (deselect with '-m \"not integration_test\")"]

[tool.setuptools.packages.find]
include = [
  "nm_vllm_utils",
  "nm_vllm_utils.benchmarks",
]
where = ["."]


[tool.setuptools_scm]
version_file = "nm_vllm_utils/__version__.py"
